--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,16 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
+<meta name="twitter:url" content="{{ page.url | absolute_url }}">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="{% if page.title %}{{ page.title | escape }} | {{ site.title }}{% else %}{{ site.title | escape }}{% endif %}">
+<meta name="twitter:site" content="{{ site.title }}">
+<meta name="twitter:description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description }}{% endif %}">
+{% if site.twitter_username %}
+  <meta name="twitter:creator" content="@{{ site.twitter_username }}">
+{% endif %}
+<meta property="twitter:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.default_img | absolute_url }}{% endif %}">
+
 </head>
 
 {% if jekyll.environment == 'production' %}
