--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
 {% if site.twitter_username %}
   <meta name="twitter:creator" content="@{{ site.twitter_username }}">
 {% endif %}
-<meta property="twitter:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.default_img | absolute_url }}{% endif %}">
+<!-- <meta property="twitter:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.default_img | absolute_url }}{% endif %}"> -->
+<meta property="twitter:image" content="{% if page.image %}{{ page.twitter_img_abs }}{% else %}{{ site.default_img | absolute_url }}{% endif %}">
 
 </head>
 
